= Wikilog release notes =

== Current development version ==

=== General notes ===

MediaWiki requirement raised to 1.16.0 and later.  MediaWiki 1.15 and earlier
are no longer supported in this release.

=== New configuration options ===

=== New features ===

* Article and comment timestamps are now displayed in the wiki timezone
  (as defined by $wgLocaltimezone).

=== Bug fixes ===

* (mw:bug 27904) Fixed method signature compatibility with Mw1.16 for
  WikilogParserCache.
* (wl:issue 12) Fixed calls to $wgParser->clearState() (which is now a private
  function).
* Fixed a crash when creating a new wikilog post as an unlogged user.

== Wikilog 1.1.0 ==

Aug 8, 2010

=== General notes ===

Database schema changed since 1.0.x, a database update is required.
You should backup your data and run maintenance/update.php to upgrade.

MediaWiki requirement raised to 1.15.0 and later. MediaWiki 1.14 and earlier
are no longer supported in this release, stick with Wikilog 1.0.x if this is
your case.

=== New configuration options ===

* $wgWikilogExtSummaries: use of categories and tags parameters in summary
  entry header and footer messages.
* $wgWikilogExpensiveLimit: configures how many items to show on pages that
  includes other pages (expensive requests that may demand article parsing).
  Replaces $wgWikilogSummaryLimit.
* $wgWikilogNumComments: default number of comments to show at once on
  discussion pages.

=== New features ===

* Messages wikilog-item-brief-header/footer, wikilog-item-header/footer and
  others replaced by wikilog-summary-header/footer, wikilog-entry-header/
  footer and others, with better support for plural and gender inflection,
  separate date and time, and also support to category and tag lists.
* (wl:issue 2) Improved article summary extraction. Now a "--more--" marker
  alone in a line breaks the summary (above) from the rest of the article
  (below). The <summary> tag has precedence over this new marker. If neither